y.output
Grammar

    0 $accept: program $end

    1 program: program statement '\n'
    2        | /* empty */

    3 statement: expression
    4          | VARIABLE '=' expression

    5 expression: INTEGER
    6           | VARIABLE
    7           | expression '+' expression
    8           | expression '-' expression
    9           | expression '*' expression
   10           | expression '/' expression
   11           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'(' (40) 11
')' (41) 11
'*' (42) 9
'+' (43) 7
'-' (45) 8
'/' (47) 10
'=' (61) 4
error (256)
INTEGER (258) 5
VARIABLE (259) 4 6


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program (14)
    on left: 1 2, on right: 0 1
statement (15)
    on left: 3 4, on right: 1
expression (16)
    on left: 5 6 7 8 9 10 11, on right: 3 4 7 8 9 10 11


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    1 program: program . statement '\n'

    $end      shift, and go to state 2
    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '('       shift, and go to state 5

    statement   go to state 6
    expression  go to state 7


state 2

    0 $accept: program $end .

    $default  accept


state 3

    5 expression: INTEGER .

    $default  reduce using rule 5 (expression)


state 4

    4 statement: VARIABLE . '=' expression
    6 expression: VARIABLE .

    '='  shift, and go to state 8

    $default  reduce using rule 6 (expression)


state 5

   11 expression: '(' . expression ')'

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 10


state 6

    1 program: program statement . '\n'

    '\n'  shift, and go to state 11


state 7

    3 statement: expression .
    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 3 (statement)


state 8

    4 statement: VARIABLE '=' . expression

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 16


state 9

    6 expression: VARIABLE .

    $default  reduce using rule 6 (expression)


state 10

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | '(' expression . ')'

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15
    ')'  shift, and go to state 17


state 11

    1 program: program statement '\n' .

    $default  reduce using rule 1 (program)


state 12

    7 expression: expression '+' . expression

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 18


state 13

    8 expression: expression '-' . expression

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 19


state 14

    9 expression: expression '*' . expression

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 20


state 15

   10 expression: expression '/' . expression

    INTEGER   shift, and go to state 3
    VARIABLE  shift, and go to state 9
    '('       shift, and go to state 5

    expression  go to state 21


state 16

    4 statement: VARIABLE '=' expression .
    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 4 (statement)


state 17

   11 expression: '(' expression ')' .

    $default  reduce using rule 11 (expression)


state 18

    7 expression: expression . '+' expression
    7           | expression '+' expression .
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 7 (expression)


state 19

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    8           | expression '-' expression .
    9           | expression . '*' expression
   10           | expression . '/' expression

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 8 (expression)


state 20

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
    9           | expression '*' expression .
   10           | expression . '/' expression

    $default  reduce using rule 9 (expression)


state 21

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   10           | expression '/' expression .

    $default  reduce using rule 10 (expression)
